--- a/2020b.tex
+++ b/2020b.tex
@@ -104,9 +104,9 @@
 提案する解析手法は、スイッチングより高速（$10^{0}-10^{1}$~Hz）に取得した時系列分光データ（2次元行列）を使用することで、観測手法に手を加えることなく大気の時間変動をモデルするものである。
 この際、大気の時間変動は行列上で低ランクな成分として近似できる。
 一方、天体信号は、観測帯域に占める割合が極端に大きくなければ行列上ではスパースな成分となる。
-この2つの成分はGoDecアルゴリズム（Thou \& Tao 2011）で行列分解することが可能であり、感度を倍悪化させることなく大気放射の時間変動モデルと除去を達成する。
+この2つの成分はGoDecアルゴリズム（Thou \& Tao 2011）で行列分解することが可能であり、感度を悪化させることなく大気放射の時間変動モデルと除去を達成する。
 
-提案手法の最大の利点は、過去の観測も含め時系列分光データが取得可能な分光観測であれば、即座に感度を倍改善できる可能性を秘めていることである。
+提案手法の最大の利点は、過去の観測も含め時系列分光データが取得可能な分光観測であれば、即座に感度を改善できる可能性を秘めていることである。
 本講演では、メキシコ50~m鏡に搭載した2~mm帯受信機（Kawabe et al.）で観測した$z=2.55$のサブミリ波銀河のCO輝線データに提案手法を適用し、実際に$\sqrt{2}$倍以上の感度の向上が得られた実証例を紹介する。
 
 
