--- a/2020b.tex
+++ b/2020b.tex
@@ -107,7 +107,7 @@
 この2つの成分はGoDecアルゴリズム（Thou \& Tao 2011）で行列分解することが可能であり、感度を悪化させることなく大気放射の時間変動モデルと除去を達成する。
 
 提案手法の最大の利点は、過去の観測も含め時系列分光データが取得可能な分光観測であれば、即座に感度を改善できる可能性を秘めていることである。
-本講演では、メキシコ50~m鏡に搭載した2~mm帯受信機（Kawabe et al.）で観測した$z=2.55$のサブミリ波銀河のCO輝線データに提案手法を適用し、実際に$\sqrt{2}$倍以上の感度の向上が得られた実証例を紹介する。
+本講演では、メキシコのLMT~50~m鏡に搭載した2~mm帯受信機（川邊他2020年春季年会）で観測した、$z=2.55$のサブミリ波銀河のCO輝線分光データに提案手法を適用し、実際に$\sqrt{2}$倍以上の感度の向上が得られた実証例を紹介する。
 
 
 
