--- a/2020b.tex
+++ b/2020b.tex
@@ -98,11 +98,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 我々は、天体信号が観測データに占める割合が小さいという性質（疎性＝スパース性）に着目することで、サブミリ波単一鏡によるポジションスイッチ観測を高感度化する解析手法を開発した。
-感度を制限する最大の要因は、天体信号の$10^{4}-10^{6}$倍ものパワーを持ち、最大数~Hzで時間変動する地球大気放射の雑音付加である。
+観測の感度を制限する最大の要因は、天体信号の$10^{4}-10^{6}$倍ものパワーを持ち、最大数~Hzで時間変動する地球大気放射の雑音付加である。
 ポジションスイッチ観測では天体と大気の空間2点を交互に観測することで、大気放射の時間変動をキャンセルしている。
 ところが、スペクトル同士の減算によって感度が$\sqrt{2}$倍悪化するだけでなく、スイッチングより高速な時間変動をキャンセルできないため、達成可能な感度は観測装置が本来持つそれを下回る。
 
-提案する解析手法は、スイッチングより高速（$10^{0}-10^{1}$~Hz）に取得した時系列分光データ（2次元行列）を使用することで、観測手法に手を加えることなく大気の時間変動をモデルするものである。
+提案する解析手法は、スイッチングより高頻度（$10^{0}-10^{1}$~Hz）に取得した時系列分光データ（2次元行列）を使用することで、観測手法に手を加えることなく大気の時間変動をモデルするものである。
 この際、大気の時間変動は行列上で低ランクな成分として近似できる。
 一方、天体信号は、観測帯域に占める割合が極端に大きくなければ行列上ではスパースな成分となる。
 この2つの成分はGoDecアルゴリズム（Thou \& Tao 2011）で行列分解することが可能であり、感度を悪化させることなく大気放射の時間変動モデルと除去を達成する。
